@@ -43,6 +43,8 @@ Release 0.1 - Unreleased
     HCAT-9. Get a beginning HCatalog website up. (gates)
 
   IMPROVEMENTS
+  	HCAT-40. Remove dependencies from the HCatalog client jar (macyang)
+
   	HCAT-27. Start and stop scripts for the server (gates)
 
   	HCAT-21. Install documenation and script (gates)
